--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ app.*.map.json
 **/android/app/google-services.json
 **/ios/GoogleService-Info.plist
 lib/firebase_options.dart
+ios/Runner/GoogleService-Info.plist
+macos/Runner/GoogleService-Info.plist
