--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ app.*.map.json
 lib/firebase_options.dart
 ios/Runner/GoogleService-Info.plist
 macos/Runner/GoogleService-Info.plist
+**/firebase_app_id_file.json
+macos/firebase_app_id_file.json
+ios/firebase_app_id_file.json
